--- a/mxshop-common/pom.xml
+++ b/mxshop-common/pom.xml
@@ -10,8 +10,18 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>cn.com.ydream</groupId>
-    <artifactId>seller-service</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>mxshop-common</artifactId>
+    <packaging>jar</packaging>
 
+    <name>mxshop-common</name>
+    <description>公共包，如公共工具类</description>
+
+    <dependencies>
+        <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper-spring-boot-starter</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+    </dependencies>
 
 </project>
