--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -31,6 +31,19 @@
     </dependencyManagement>
 
     <dependencies>
+        <!-- 本项目依赖start -->
+        <dependency>
+            <groupId>cn.com.ydream</groupId>
+            <artifactId>mxshop-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <!-- 本项目依赖end -->
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-eureka</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -72,6 +85,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.11</version>
         </dependency>
 
         <dependency>
