--- a/product-service/src/main/resources/bootstrap.yml
+++ b/product-service/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: user-service
+    name: product-service
   profiles:
     active: default
   cloud:
@@ -13,4 +13,4 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
 
 server:
-  port: 8900
+  port: 8901
