添加服务网关，实现服务统一入口

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>mxshop-config</module>
         <module>mxshop-common</module>
         <module>mxshop-eureka</module>
+        <module>mxshop-gateway</module>
     </modules>
 
 </project>
