添加oauth2认证服务

--- a/mxshop-auth/pom.xml
+++ b/mxshop-auth/pom.xml
@@ -5,11 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>cn.com.ydream</groupId>
-    <artifactId>product-service</artifactId>
+    <artifactId>mxshop-auth</artifactId>
     <packaging>jar</packaging>
 
-    <name>product-service</name>
-    <description>商品服务</description>
+    <name>mxshop-auth</name>
+    <description>认证授权服务</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -42,8 +42,8 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-security</artifactId>
         </dependency>
-
         <dependency>
+
             <groupId>org.springframework.security.oauth</groupId>
             <artifactId>spring-security-oauth2</artifactId>
         </dependency>
@@ -128,5 +128,6 @@
             </plugin>
         </plugins>
     </build>
+
 
 </project>
