--- a/mxshop-config/src/main/resources/shared/product-service.yml
+++ b/mxshop-config/src/main/resources/shared/product-service.yml
@@ -15,3 +15,17 @@ pagehelper.helperDialect: mysql
 pagehelper.reasonable: true
 pagehelper.supportMethodsArguments: true
 pagehelper.params: count=countSql
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
+
+server:
+  port: 8901
+
+#被保护的资源会通过该URI获取身份信息和授权信息
+security:
+  oauth2:
+    resource:
+      user-info-uri: http://localhost:5000/auth/account
