各服务修改默认的hystrix超时时间配置，目前配置为12秒

--- a/mxshop-config/src/main/resources/shared/mxshop-auth-prod.yml
+++ b/mxshop-config/src/main/resources/shared/mxshop-auth-prod.yml
@@ -17,7 +17,7 @@ pagehelper.supportMethodsArguments: true
 pagehelper.params: count=countSql
 
 server:
-  context-path: /uaa
+  contextPath: /auth
   port: 5000
 
 product.service.password: productservice
