--- a/mxshop-config/src/main/resources/shared/mxshop-auth-dev.yml
+++ b/mxshop-config/src/main/resources/shared/mxshop-auth-dev.yml
@@ -1,5 +1,5 @@
 #数据源
-spring.datasource.url: jdbc:mysql://127.0.0.1:3306/test?useSSL=false&serverTimezone=UTC
+spring.datasource.url: jdbc:mysql://192.168.1.250:3306/test?useSSL=false&serverTimezone=UTC
 spring.datasource.username: root
 spring.datasource.password: root
 spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
@@ -17,7 +17,7 @@ pagehelper.supportMethodsArguments: true
 pagehelper.params: count=countSql
 
 server:
-  context-path: /uaa
+  contextPath: /auth
   port: 5000
 
 product.service.password: productservice
