--- a/mxshop-config/src/main/resources/shared/product-service-dev.yml
+++ b/mxshop-config/src/main/resources/shared/product-service-dev.yml
@@ -1,5 +1,5 @@
 #数据源
-spring.datasource.url: jdbc:mysql://127.0.0.1:3306/test?useSSL=false&serverTimezone=UTC
+spring.datasource.url: jdbc:mysql://192.168.1.250:3306/test?useSSL=false&serverTimezone=UTC
 spring.datasource.username: root
 spring.datasource.password: root
 spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
@@ -29,3 +29,6 @@ security:
   oauth2:
     resource:
       user-info-uri: http://localhost:5000/auth/account
+
+#设置远程服务调用默认超时时间
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 12000
