--- a/mxshop-config/src/main/resources/shared/product-service.yml
+++ b/mxshop-config/src/main/resources/shared/product-service.yml
@@ -29,3 +29,6 @@ security:
   oauth2:
     resource:
       user-info-uri: http://localhost:5000/auth/account
+
+#设置远程服务调用默认超时时间
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 12000
