--- a/mxshop-config/src/main/resources/shared/user-service-dev.yml
+++ b/mxshop-config/src/main/resources/shared/user-service-dev.yml
@@ -2,10 +2,10 @@
 example.property: "I AM IN THE DEFAULT"
 
 #数据源
-spring.datasource.url: jdbc:mysql://192.168.1.250:3306/test
+spring.datasource.url: jdbc:mysql://192.168.1.250:3306/test?useSSL=false&serverTimezone=UTC
 spring.datasource.username: root
 spring.datasource.password: root
-spring.datasource.driver-class-name: com.mysql.jdbc.Driver
+spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
 
 #tkMapper通用mapper配置
 mybatis.type-aliases-package: com.karle.bean
@@ -26,3 +26,6 @@ eureka:
 
 server:
   port: 8900
+
+#设置远程服务调用默认超时时间
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 12000
