--- a/product-service/src/main/resources/bootstrap.yml
+++ b/product-service/src/main/resources/bootstrap.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: product-service
   profiles:
-    active: default
+    active: dev
   cloud:
     config:
       uri: http://localhost:8888
