--- a/mxshop-config/src/main/resources/shared/mxshop-auth.yml
+++ b/mxshop-config/src/main/resources/shared/mxshop-auth.yml
@@ -17,7 +17,7 @@ pagehelper.supportMethodsArguments: true
 pagehelper.params: count=countSql
 
 server:
-  contextPath: /auth
+  context-path: /uaa
   port: 5000
 
 product.service.password: productservice
