--- a/mxshop-config/src/main/resources/shared/mxshop-gateway.yml
+++ b/mxshop-config/src/main/resources/shared/mxshop-gateway.yml
@@ -8,12 +8,11 @@ hystrix:
       execution:
         isolation:
           thread:
-            timeoutInMilliseconds: 7000
+            timeoutInMilliseconds: 20000
 
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+ribbon:
+  ReadTimeout: 20000
+  ConnectTimeout: 20000
 
 zuul:
   ignored-services: '*'
@@ -21,6 +20,12 @@ zuul:
     connect-timeout-millis: 20000
     socket-timeout-millis: 20000
   routes:
+    auth-service:
+      path: /uaa/**
+      url: http://mxshop-auth:5000
+      stripPrefix: false
+      sensitiveHeaders:
+
     user-service:
       path: /user/**
       serviceId: user-service
