--- a/mxshop-config/src/main/resources/shared/user-service-dev.yml
+++ b/mxshop-config/src/main/resources/shared/user-service-dev.yml
@@ -19,13 +19,6 @@ pagehelper.reasonable: true
 pagehelper.supportMethodsArguments: true
 pagehelper.params: count=countSql
 
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
-
 server:
+  context-path: /user
   port: 8900
-
-#设置远程服务调用默认超时时间
-hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 12000
