--- a/mxshop-eureka/src/main/resources/bootstrap.yml
+++ b/mxshop-eureka/src/main/resources/bootstrap.yml
@@ -3,4 +3,13 @@ spring:
     name: mxshop-eureka
   cloud:
     config:
-      uri: http://localhost:8888
+      uri: http://config:8888
+
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    registerWithEureka: false
+    fetchRegistry: false
+    server:
+      waitTimeInMsWhenSyncEmpty: 0
