--- a/mxshop-auth/src/main/resources/bootstrap.yml
+++ b/mxshop-auth/src/main/resources/bootstrap.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: mxshop-auth
   profiles:
-    active: dev
+    active: default
   cloud:
     config:
       uri: http://config:8888
