--- a/mxshop-config/src/main/resources/shared/mxshop-auth.yml
+++ b/mxshop-config/src/main/resources/shared/mxshop-auth.yml
@@ -1,20 +1,8 @@
 #数据源
-spring.datasource.url: jdbc:mysql://127.0.0.1:3306/test?useSSL=false&serverTimezone=UTC
+spring.datasource.url: jdbc:mysql://127.0.0.1:3306/test?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username: root
 spring.datasource.password: root
 spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
-
-#tkMapper通用mapper配置
-mybatis.type-aliases-package: com.karle.bean
-mybatis.mapper-locations: classpath:mapper/*.xml
-mapper.mappers: com.karle.tk.TkMapper
-mapper.identity: MYSQL
-
-#pagehelper配置
-pagehelper.helperDialect: mysql
-pagehelper.reasonable: true
-pagehelper.supportMethodsArguments: true
-pagehelper.params: count=countSql
 
 server:
   context-path: /uaa
