--- a/mxshop-config/src/main/resources/shared/product-service.yml
+++ b/mxshop-config/src/main/resources/shared/product-service.yml
@@ -16,3 +16,22 @@ security:
       accessTokenUri: http://mxshop-auth:5000/uaa/oauth/token
       grant-type: client_credentials
       scope: server
+
+spring:
+  cloud:
+    stream:
+      binders:
+        rabbitmq:
+          type: rabbit
+          environment:
+            spring:
+              rabbitmq:
+                host: localhost
+                port: 5672
+                username: springcloud
+                password: springcloud
+      bindings:
+        userChangeInput:
+          destination:  userChangeTopic
+          content-type: application/json
+          binder: rabbitmq
