--- a/mxshop-config/src/main/resources/shared/product-service-dev.yml
+++ b/mxshop-config/src/main/resources/shared/product-service-dev.yml
@@ -4,6 +4,11 @@ spring.datasource.username: root
 spring.datasource.password: root
 spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
 
+#redis
+spring.redis.host: localhost
+spring.redis.port: 6379
+spring.redis.password:
+
 server:
   context-path: /product
   port: 8901
