--- a/mxshop-eureka/pom.xml
+++ b/mxshop-eureka/pom.xml
@@ -6,6 +6,7 @@
 
     <groupId>cn.com.ydream</groupId>
     <artifactId>mxshop-eureka</artifactId>
+    <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>mxshop-eureka</name>
@@ -56,5 +57,17 @@
             <artifactId>spring-cloud-config-client</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <finalName>mxshop-eureka</finalName>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
