--- a/mxshop-config/pom.xml
+++ b/mxshop-config/pom.xml
@@ -9,7 +9,7 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>Config Server</name>
+    <name>mxshop-config</name>
     <description>mxshop配置中心</description>
 
     <parent>
@@ -51,7 +51,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <finalName>config</finalName>
+                    <finalName>mxshop-config</finalName>
                 </configuration>
             </plugin>
         </plugins>
