--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -4,6 +4,14 @@ services:
     ports:
       - 5672:5672
 
+  mysql:
+    ports:
+      - 3306:3306
+
+  redis:
+    ports:
+    - 6379:6379
+
   mxshop-config:
     build: mxshop-config
     ports:
