--- a/mxshop-config/Dockerfile
+++ b/mxshop-config/Dockerfile
@@ -2,7 +2,7 @@ FROM java:8-jre
 MAINTAINER Chen Tianzhu "36905602@qq.com"
 
 ADD ./target/mxshop-config.jar /app/
-CMD ["java", "-Xmx200m", "-jar", "/app/config.jar"]
+CMD ["java", "-Xmx200m", "-jar", "/app/mxshop-config.jar"]
 
 HEALTHCHECK --interval=10s --timeout=3s CMD curl -f http://localhost:8888/health || exit 1
 
