--- a/mxshop-eureka/src/main/resources/bootstrap.yml
+++ b/mxshop-eureka/src/main/resources/bootstrap.yml
@@ -3,7 +3,7 @@ spring:
     name: mxshop-eureka
   cloud:
     config:
-      uri: http://config:8888
+      uri: http://mxshop-config:8888
 
 eureka:
   server:
