--- a/mxshop-config/src/main/resources/shared/mxshop-auth-dev.yml
+++ b/mxshop-config/src/main/resources/shared/mxshop-auth-dev.yml
@@ -1,8 +1,8 @@
 #数据源
-spring.datasource.url: jdbc:mysql://192.168.1.250:3306/test?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.url: jdbc:mysql://192.168.99.100:3306/test
 spring.datasource.username: root
 spring.datasource.password: root
-spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name: com.mysql.jdbc.Driver
 
 server:
   context-path: /uaa
