--- a/mxshop-config/src/main/resources/shared/product-service-dev.yml
+++ b/mxshop-config/src/main/resources/shared/product-service-dev.yml
@@ -1,11 +1,11 @@
 #数据源
-spring.datasource.url: jdbc:mysql://192.168.1.250:3306/test?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.url: jdbc:mysql://192.168.99.100:3306/test
 spring.datasource.username: root
 spring.datasource.password: root
-spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name: com.mysql.jdbc.Driver
 
 #redis
-spring.redis.host: localhost
+spring.redis.host: 192.168.99.100
 spring.redis.port: 6379
 spring.redis.password:
 
@@ -31,10 +31,10 @@ spring:
           environment:
             spring:
               rabbitmq:
-                host: localhost
+                host: 192.168.99.100
                 port: 5672
-                username: springcloud
-                password: springcloud
+                username: guest
+                password: guest
       bindings:
         userChangeInput:
           destination:  userChangeTopic
