--- a/mxshop-config/src/main/resources/shared/product-service-prod.yml
+++ b/mxshop-config/src/main/resources/shared/product-service-prod.yml
@@ -1,8 +1,8 @@
 #数据源
-spring.datasource.url: jdbc:mysql://127.0.0.1:3306/test?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.url: jdbc:mysql://127.0.0.1:3306/test
 spring.datasource.username: root
 spring.datasource.password: root
-spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name: com.mysql.jdbc.Driver
 
 #redis
 spring.redis.host: localhost
