--- a/mxshop-config/src/main/resources/shared/product-service.yml
+++ b/mxshop-config/src/main/resources/shared/product-service.yml
@@ -1,11 +1,11 @@
 #数据源
-spring.datasource.url: jdbc:mysql://127.0.0.1:3306/test?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.url: jdbc:mysql://127.0.0.1:3306/test
 spring.datasource.username: root
 spring.datasource.password: root
-spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name: com.mysql.jdbc.Driver
 
 #redis
-spring.redis.host: localhost
+spring.redis.host: redis
 spring.redis.port: 6379
 spring.redis.password:
 
