--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
   mysql:
     image: mysql:5.7
     restart: always
+    volumes:
+      - db_data:/var/lib/mysql
     ports:
       - 3306:3306
     environment:
@@ -121,3 +123,6 @@ services:
       options:
         max-size: "10m"
         max-file: "10"
+
+volumes:
+  db_data:
