单元测试报错解决

--- a/mxshop-config/src/main/resources/shared/product-service.yml
+++ b/mxshop-config/src/main/resources/shared/product-service.yml
@@ -33,8 +33,8 @@ spring:
               rabbitmq:
                 host: localhost
                 port: 5672
-                username: springcloud
-                password: springcloud
+                username: guest
+                password: guest
       bindings:
         userChangeInput:
           destination:  userChangeTopic
