--- a/mxshop-config/src/main/resources/shared/user-service-dev.yml
+++ b/mxshop-config/src/main/resources/shared/user-service-dev.yml
@@ -29,7 +29,7 @@ spring:
           environment:
             spring:
               rabbitmq:
-                host: 192.168.99.100
+                host: locahost
                 port: 5672
                 username: guest
                 password: guest
