maven打包跳过单元测试

--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -164,6 +164,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
                     <finalName>user-service</finalName>
+                    <skip>true</skip>
                 </configuration>
             </plugin>
         </plugins>
