--- a/product-service/pom.xml
+++ b/product-service/pom.xml
@@ -160,6 +160,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
                     <finalName>product-service</finalName>
+                    <skip>true</skip>
                 </configuration>
             </plugin>
         </plugins>
