添加monitor的docker支持

--- a/.travis.yml
+++ b/.travis.yml
@@ -53,4 +53,8 @@ after_success:
   - docker tag $PRODUCT_SERVICE:$COMMIT $PRODUCT_SERVICE:$TAG
   - docker push $PRODUCT_SERVICE
 
-  # 测试
+  # MXSHOP-MONITOR
+  - export MXSHOP_MONITOR=chentianzhu/mxshop-monitor
+  - docker build -t MXSHOP_MONITOR:$COMMIT ./mxshop-monitor
+  - docker tag $MXSHOP_MONITOR:$COMMIT $MXSHOP_MONITOR:$TAG
+  - docker push $MXSHOP_MONITOR
