--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -124,5 +124,18 @@ services:
         max-size: "10m"
         max-file: "10"
 
+  mxshop-monitor:
+    image: chentianzhu/mxshop-monitor
+    restart: always
+    depends_on:
+      mxshop-config:
+        condition: service_healthy
+    ports:
+      - 8080:8080
+    logging:
+      options:
+        max-size: "10m"
+        max-file: "10"
+
 volumes:
   db_data:
