添加docker常用命令

--- a/mxshop-auth/src/main/resources/bootstrap.yml
+++ b/mxshop-auth/src/main/resources/bootstrap.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: mxshop-auth
   profiles:
-    active: default
+    active: dev
   cloud:
     config:
       uri: http://mxshop-config:8888
