测试环境配置

--- a/product-service/src/main/resources/bootstrap.yml
+++ b/product-service/src/main/resources/bootstrap.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: product-service
   profiles:
-    active: dev
+    active: default
   cloud:
     config:
       uri: http://mxshop-config:8888
