--- a/mxshop-config/src/main/resources/shared/mxshop-auth.yml
+++ b/mxshop-config/src/main/resources/shared/mxshop-auth.yml
@@ -5,9 +5,9 @@ spring.datasource.password: root
 spring.datasource.driver-class-name: com.mysql.jdbc.Driver
 
 #redis
-spring.redis.host: redis
+spring.redis.host: localhost
 spring.redis.port: 6379
-spring.redis.password:
+spring.redis.password: 5i841qaz
 
 server:
   context-path: /uaa
