--- a/mxshop-config/src/main/resources/shared/product-service-prod.yml
+++ b/mxshop-config/src/main/resources/shared/product-service-prod.yml
@@ -1,5 +1,5 @@
 #数据源
-spring.datasource.url: jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&autoReconnect=true
+spring.datasource.url: jdbc:mysql://127.0.0.1:3306/test?useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&autoReconnect=true
 spring.datasource.username: root
 spring.datasource.password: root
 spring.datasource.driver-class-name: com.mysql.jdbc.Driver
